--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,23 +4,26 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon server.js"
     },
     "keywords": [
-      "nodejs",
-      "express",
-      "rest",
-      "api",
-      "sequelize",
-      "mysql"
+        "nodejs",
+        "express",
+        "rest",
+        "api",
+        "sequelize",
+        "mysql"
     ],
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "cors": "^2.8.5",
-      "express": "^4.18.2",
-      "mysql2": "^3.0.0-rc.1",
-      "sequelize": "^6.25.4"
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "mysql2": "^3.0.0-rc.1",
+        "sequelize": "^6.25.4"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.20"
     }
-  }
-  
+}
