iniciado page home

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
+    "@mui/icons-material": "^5.11.0",
     "@mui/material": "latest",
     "@mui/x-data-grid": "^5.0.0",
     "@testing-library/jest-dom": "^5.16.5",
